@@ -199,6 +199,7 @@ monikers/Makefile
 schemas/Makefile
 gnome-data/Makefile
 libgnome/libgnome-2.0.pc
+libgnome/libgnome-2.0-uninstalled.pc
 doc/Makefile
 doc/reference/Makefile
 ])
