@@ -1,3 +1,9 @@
+2004-03-04  Glynn Foster  <glynn.foster@sun.com>
+
+	* configure.in, libgnome/Makefile.am,
+	libgnome/libgnome-2.0-uninstalled.pc.in: Add
+	uninstalled pc file.
+
 2004-02-25  Danilo Šegan  <dsegan@gmx.net>
 
 	* configure.in: Added sr@ije to ALL_LINGUAS.
